<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_task">

    <fragment
        android:id="@+id/nav_goods"
        android:name="com.example.myapplication.ui.goods.GoodsFragment"
        android:label="@string/menu_goods"
        tools:layout="@layout/fragment_goods" />

    <fragment
        android:id="@+id/nav_property"
        android:name="com.example.myapplication.ui.property.PropertyFragment"
        android:label="@string/menu_property"
        tools:layout="@layout/fragment_property" />

    <fragment
        android:id="@+id/nav_task"
        android:name="com.example.myapplication.ui.task.TaskFragment"
        android:label="@string/menu_task"
        tools:layout="@layout/fragment_task" />


    <fragment
        android:id="@+id/nav_skill"
        android:name="com.example.myapplication.ui.skill.SkillFragment"
        android:label="@string/menu_skill"
        tools:layout="@layout/fragment_skill" />

    <fragment
        android:id="@+id/nav_wish"
        android:name="com.example.myapplication.ui.wish.WishFragment"
        android:label="@string/menu_wish"
        tools:layout="@layout/fragment_wish" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.myapplication.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

</navigation>